--- a/frontend2/app/index.html
+++ b/frontend2/app/index.html
@@ -2,11 +2,11 @@
 <!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
 <!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
 <!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
-<!--[if gt IE 8]><!--> <html class="no-js"> <!--<![endif]-->
+<!--[if gt IE 8]><!--> <html ng-app="node-spotify" class="no-js"> <!--<![endif]-->
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-    <title></title>
+    <title>node-spotify</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width">
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
@@ -14,8 +14,13 @@
     <link rel="stylesheet" href="styles/bootstrap.css">
     <link rel="stylesheet" href="styles/main.css">
     <!-- endbuild -->
+    <style>
+      body {
+        padding-top: 59px;
+      } 
+    </style>
   </head>
-  <body ng-app="frontend2App">
+  <body ng-controller="MainCtrl">
     <!--[if lt IE 7]>
       <p class="chromeframe">You are using an outdated browser. <a href="http://browsehappy.com/">Upgrade your browser today</a> or <a href="http://www.google.com/chromeframe/?redirect=true">install Google Chrome Frame</a> to better experience this site.</p>
     <![endif]-->
@@ -26,21 +31,57 @@
     <![endif]-->
 
     <!-- Add your site or application content here -->
-    <div class="container" ng-view></div>
+    <div class="navbar nav-header navbar-fixed-top">
+      <div class="navbar-inner">
+        <span class="brand">node-spotify</span>
+        <button id="logoutButton" class="pull-right btn btn-warning">Logout</button>
+      </div>
+    </div>
+    
+    <div class="container-fluid">
+      <div class="row-fluid">
+        <div class="span3">
+           <div class="container-fluid">
+              <div class="row-fluid">
+                <div class="span12" id="playlist-menu" ng-controller="MenuCtrl">
+                  <ul class="nav nav-tabs nav-stacked" id="playlists">
+                    <li ng-repeat="playlist in playlists">
+                      <a ng-click="loadPlaylist(playlist.id)">{{playlist.name}}</a>
+                    </li>
+                  </ul>
+                </div>
+              </div>
+              <div class ="row-fluid">
+                <div class="span12">
+                  <div id="now-playing"></div>
+                </div>
+              </div>
+            </div>
+        </div>
+        <div class="span9" ng-controller="PlaylistCtrl">
+          <h2>{{playlist.name}}</h2>
+          <table class="table table-striped">
+              <tr><th style="width: 20px">Position</th><th>Artist</th><th>Name</th></tr>
+              <tr ng-repeat="track in playlist.tracks">
+                <td>{{$index}}</td>
+                <td>
+                  <span ng-repeat="artist in track.artists">{{artist.name}},</span>
+                </td>
+                <td>{{track.name}}</td></tr>
+          </table>
+        </div>
+      </div>
+    </div>
 
     <script src="components/angular/angular.js"></script>
 
     <!-- build:js scripts/scripts.js -->
     <script src="scripts/app.js"></script>
     <script src="scripts/controllers/main.js"></script>
+    <script src="scripts/controllers/Menu.js"></script>
+    <script src="scripts/controllers/Playlist.js"></script>
+    <script src="scripts/services/Socket.js"></script>
+    <script src="scripts/services/events.js"></script>
     <!-- endbuild -->
-
-    <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
-    <script>
-      var _gaq=[['_setAccount','UA-XXXXX-X'],['_trackPageview']];
-      (function(d,t){var g=d.createElement(t),s=d.getElementsByTagName(t)[0];
-      g.src=('https:'==location.protocol?'//ssl':'//www')+'.google-analytics.com/ga.js';
-      s.parentNode.insertBefore(g,s)}(document,'script'));
-    </script>
   </body>
 </html>
